fixes alignment within results table

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -49,3 +49,7 @@ img.summoner-icon {
 .page-header-no-line {
   border-bottom:none;
 }
+
+.table > tbody > tr > td {
+  vertical-align: middle;
+}
